syntax = "proto3";

package pb;
import "google/protobuf/struct.proto";
import "google/protobuf/any.proto";
// option go_package = "path;name";
option go_package = "./pb_gen;pb_gen";

//RPC接口
//service CloudCtlService {
//  rpc HelloWorld(HelloWorldRequest) returns (HelloWorldResponse) {}
//}
//
//message HelloWorldRequest {
//  string hello_text = 1;
//}
//
//message HelloWorldResponse {
//  string thanks_text = 1;
//}

//meta info in spec, which will be used in cloud resource init
message MetaInfo{
  string SpecName = 1;
  string DomainName = 2;
  string InitName = 3;
  string InitJsonPath = 4;
  bool IsArray = 5;
}

message CrdConfig{
  string CrdName = 1;
  repeated MetaInfo MetaInfos = 2;
  bytes InitJson = 3;
  bytes DeleteJson = 4;
  string DomainJsonPath = 5;
}